--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 </head>
 
 <body>
-    <div class="container">
+    <div class="headtext">TEAM  INTRODUCTION!!</div>
+
+  <div class="container">
+   
     <div class="third">
         <div class="circle"></div>
         <h1>Phuwalit Jaraenpon</h1><br>
@@ -43,7 +46,9 @@
           <a href="www">
             <img class="mailicon" src="IMAGE/emailicon.png"></a>
         </p>
+      </div>
+  
     </div>
-</div>
+
 </body>
 </html>
