jerry info update

--- a/index.html
+++ b/index.html
@@ -35,12 +35,12 @@
 
     <div class="jerry" >
         <div class="circle"></div>
-        <h1>Phuwalit Jaraenpon</h1><br>
-          <p>6609650590<Br>
-            <a href="www">
+        <h1>Sattawut Vichitsin</h1><br>
+          <p>6609650723<Br>
+            <a href="https://www.instagram.com/stwvcs.rar/">
             <img class="inicon" src="IMAGE/instagramicon.png"></a>
          
-          <a href="www">
+          <a href="mailto:sattawut.vic@dome.tu.ac.th">
             <img class="mailicon" src="IMAGE/emailicon.png"></a>
         </p>
     </div>
