--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 
 <body>
-    <div class="headtext">TEAM  INTRODUCTION!!</div>
+    <div class="headtext">
+      <div class="square-icon"></div>
+      TEAM  INTRODUCTION!!!</div>
 
   <div class="container">
    
