new page for ig

--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
    
     <div class="polo">
         <div class="circle"></div>
-        <h1>Phuwalit Jaraenpon</h1><br>
-            <p style="color: white;">6609650590<Br>
-        <a href="www" target="_blank">    
+        <h1>Supanat Tangkitvutikul</h1><br>
+            <p style="color: white;">6609650665<Br>
+        <a href="https://www.instagram.com/plst_polo/" target="_blank">    
             <img class="inicon" src="IMAGE/instagramicon.png"></a>
          
-          <a href="www">
+          <a href="mailto:supanat.tan@dome.tu.ac.th">
             <img class="mailicon" src="IMAGE/emailicon.png"></a>
         </p>
     </div>
