--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="headtext">
       <div class="square-icon"></div>
-      TEAM  INTRODUCTION!!!</div>
+      TEAM  INTRODUCTION</div>
 
   <div class="container">
    
@@ -28,16 +28,7 @@
    
     <div class="polo">
 
-      <div class="circle"> <img class="ourpic" src="************" alt="picture"></div>
-        <h1>Phuwalit Jaraenpon</h1><br>
-            <p style="color: white;">6609650590<Br>
-        <a href="wwwwwwwwwwwwwwwww**" >    
-            <img class="inicon" src="IMAGE/instagramicon.png" alt="IG"></a>
-         
-          <a href="wwwwwwwwwwwwwwwww**">
-            <img class="mailicon" src="IMAGE/emailicon.png" alt="email"></a>
-
-        <div class="circle"></div>
+      <div class="circle"> <img class="ourpic" src="******************" alt="picture"></div>
         <h1>Supanat Tangkitvutikul</h1><br>
             <p style="color: white;">6609650665<Br>
         <a href="https://www.instagram.com/plst_polo/" target="_blank">    
