--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="circle"> <img class="ourpic" src="IMAGE/3rdpic.jpg" alt="picture"></div>
         <h1>Phuwalit Jaraenpon</h1><br>
           <p>6609650590<Br>
-                <a href="https://www.instagram.com/please_3rd/" >
+                <a href="https://www.instagram.com/please_3rd/" target="_blank" >
                 <img class="inicon" src="IMAGE/instagramicon.png" alt="IG"></a>
              
               <a href="mailto:phuwalit.jar@dome.tu.ac.th">
@@ -40,10 +40,10 @@
     </div>
 
     <div class="jerry" >
-      <div class="circle"> <img class="ourpic" src="******************" alt="picture"></div>
+      <div class="circle"> <img class="ourpic" src="IMAGE/jerrypic.jpg" alt="picture"></div>
         <h1>Sattawut Vichitsin</h1><br>
           <p>6609650723<Br>
-            <a href="https://www.instagram.com/stwvcs.rar/" >
+            <a href="https://www.instagram.com/stwvcs.rar/" target="_blank" >
             <img class="inicon" src="IMAGE/instagramicon.png" alt="IG"></a>
          
           <a href="mailto:sattawut.vic@dome.tu.ac.th" >
