--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
    
     <div class="polo">
 
-      <div class="circle"> <img class="ourpic" src="******************" alt="picture"></div>
+      <div class="circle"> <img class="ourpic" src="IMAGE/polopic.png" alt="picture"></div>
         <h1>Supanat Tangkitvutikul</h1><br>
             <p style="color: white;">6609650665<Br>
         <a href="https://www.instagram.com/plst_polo/" target="_blank">    
