--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <link rel="stylesheet" href="CSS/CSSsheet.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TEAM INTRO</title>
+    <title>G14 Project</title>
 
 </head>
 
@@ -30,7 +30,7 @@
 
       <div class="circle"> <img class="ourpic" src="IMAGE/polopic.png" alt="picture"></div>
         <h1>Supanat Tangkitvutikul</h1><br>
-            <p style="color: white;">6609650665<Br>
+            <p>6609650665<Br>
         <a href="https://www.instagram.com/plst_polo/" target="_blank">    
             <img class="inicon" src="IMAGE/instagramicon.png"></a>
          
@@ -52,6 +52,15 @@
       </div>
   
     </div>
+    <br><br><br>
+    <div class="link">
+    <a href="" >
+      <p style="font-size: 120%; color: black;"> < </p>
+    </a>
+    <a href="" >
+      <p style="font-size: 120%;color: black;"> > </p>
+    </a>
+  </div>
 
-</body>
+  </body>
 </html>
