--- a/JS/index.html
+++ b/JS/index.html
@@ -115,19 +115,37 @@
       </div>
     </form>
   </div>
+  
   <div class="showinfo">
-    <p>Name : <span id="outputName"></span></p>
-    <p>StudentID : <span id="outputStudentID"></span></p>
-    <p>Email : <span id="outputEmail"></span></p>
-    <p>Work/Activity Title : <span id="outputWorkTitle"></span></p>
-    <p>Type of Work/Activity : <span id="outputActivityType"></span></p>
-    <p>Academic Year : <span id="outputAcademicYear"></span></p>
-    <p>Semester : <span id="outputSemester"></span></p>
-    <p>Start Date/Time : <span id="outputStartDate"></span></p>
-    <p>End Date/Time : <span id="outputEndDate"></span></p>
-    <p>Location : <span id="outputLocation"></span></p>
-    <p>Description : <span id="outputDescription"></span></p>
+    <div class="head-info-box">
+      <h2 >TU PASSPORT</h2>
+      <div class="square" style="width: 95px;height: 90px;"><img class="img-icon" style="width: 95px;height: 90px;" src="image/tuicon.png" alt="picture"></div>
+  </div><hr>
 
+   <div class="info-box">
+    <div class="info-box1">
+    <div class="square"><img class="img-icon" src="image/profile.png"alt="picture"></div>
+    <p><b>Name</b><br><span id="outputName"></span></p>
+    <p><b>StudentID</b><br><span id="outputStudentID"></span></p>
+    <p><b>Email</b><br><span id="outputEmail"></span></p>
+    <div class="square"><img class="img-icon" src="image/location.png"alt="picture"></div>
+    <p><b>Location</b><br><span id="outputLocation"></span></p>
+    <p><b>Description</b><br><span id="outputDescription"></span></p>
+  </div>
+   
+  <div class="vertical-line" ></div>
+   
+  <div class="info-box2">
+    <div class="square"><img class="img-icon" src="image/work.png"alt="picture"></div>
+    <p><b>Activity Title </b><br> <span id="outputWorkTitle"></span></p>
+    <p><b>Type of Work/Activity </b><br><span id="outputActivityType"></span></p>
+    <div class="square"><img class="img-icon" src="image/date.png"alt="picture"></div>
+    <p><b>Academic Year </b><br> <span id="outputAcademicYear"></span></p>
+    <p><b>Semester </b><br> <span id="outputSemester"></span></p>
+    <p><b>Start Date/Time </b><br> <span id="outputStartDate"></span></p>
+    <p><b>End Date/Time </b><br> <span id="outputEndDate"></span></p>
+   </div>
+  </div>
 
   </div>
 
