--- a/index.html
+++ b/index.html
@@ -57,10 +57,9 @@
     <a href="" >
       <p style="font-size: 120%; color: black;"> < </p>
     </a>
-    <a href="" >
+    <a href="indexJS.html" >
       <p style="font-size: 120%;color: black;"> > </p>
     </a>
   </div>
-
   </body>
 </html>
