--- a/indexJS.html
+++ b/indexJS.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
   <title>Forms - CSTU Passport</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="CSS/styles.css">
 </head>
 <body>
   <!-- Form Container -->
@@ -148,6 +148,14 @@
   </div>
 
   </div>
+
+  <div class="link" style="display:flex ; justify-content: center;" >
+    <a href="index.html" >
+      <p style="font-size: 120%; color: black;"> < </p>
+    </a>
+    <a href=""  style="margin-left: 10px;">
+      <p style="font-size: 120%;color: black;"> > </p>
+    </a>
 
   <!-- JavaScript -->
   <script src="script.js"></script>
