--- a/CSTU Passport/JS/indexJS.html
+++ b/CSTU Passport/JS/indexJS.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
+  <!-- <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"> -->
   <title>Forms - CSTU Passport</title>
-  <link rel="stylesheet" href="CSS/styles.css">
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
@@ -43,17 +43,11 @@
         <input type="text" id="workTitle" name="workTitle" />
       </div>
 
+      <!-- Type of Work/Activity Field -->
       <div class="form-group">
         <label for="activityType">Type of Work/Activity</label>
         <select id="activityType" name="activityType">
           <option value="" disabled selected>Select an option</option>
-          <option value="Course">Course</option>
-          <option value="Activity">Activity</option>
-          <option value="Work">Work</option>
-          <option value="Research">Research</option>
-          <option value="Sports">Sports</option>
-          <option value="Competition">Competition</option>
-          <option value="Computer Science">Computer Science</option>
         </select>
       </div>
 
@@ -151,16 +145,7 @@
 
   </div>
 
-  <div class="link" style="display:flex ; justify-content: center;" >
-    <a href="index.html" >
-      <p style="font-size: 120%; color: black;"> < </p>
-    </a>
-    <a href=""  style="margin-left: 10px;">
-      <p style="font-size: 120%;color: black;"> > </p>
-    </a>
-
-  <!-- JavaScript -->
-  <script src="JS/script.js"></script>
+  <script src="script.js"></script>
 
 
 
