--- a/CSTU Passport/JS/indexJS.html
+++ b/CSTU Passport/JS/indexJS.html
@@ -115,16 +115,16 @@
   <div class="showinfo">
     <div class="head-info-box">
       <h2 >TU PASSPORT</h2>
-      <div class="square" style="width: 95px;height: 90px;"><img class="img-icon" style="width: 95px;height: 90px;" src="image/tuicon.png" alt="picture"></div>
+      <div class="square" style="width: 95px;height: 90px;"><img class="img-icon" style="width: 95px;height: 90px;" src="tuicon.png" alt="picture"></div>
   </div><hr>
 
    <div class="info-box">
     <div class="info-box1">
-    <div class="square"><img class="img-icon" src="image/profile.png"alt="picture"></div>
+    <div class="square"><img class="img-icon" src="profile.png"alt="picture"></div>
     <p><b>Name</b><br><span id="outputName"></span></p>
     <p><b>StudentID</b><br><span id="outputStudentID"></span></p>
     <p><b>Email</b><br><span id="outputEmail"></span></p>
-    <div class="square"><img class="img-icon" src="image/location.png"alt="picture"></div>
+    <div class="square"><img class="img-icon" src="location.png"alt="picture"></div>
     <p><b>Location</b><br><span id="outputLocation"></span></p>
     <p><b>Description</b><br><span id="outputDescription"></span></p>
   </div>
@@ -132,10 +132,10 @@
   <div class="vertical-line" ></div>
    
   <div class="info-box2">
-    <div class="square"><img class="img-icon" src="image/work.png"alt="picture"></div>
+    <div class="square"><img class="img-icon" src="work.png"alt="picture"></div>
     <p><b>Activity Title </b><br> <span id="outputWorkTitle"></span></p>
     <p><b>Type of Work/Activity </b><br><span id="outputActivityType"></span></p>
-    <div class="square"><img class="img-icon" src="image/date.png"alt="picture"></div>
+    <div class="square"><img class="img-icon" src="date.png"alt="picture"></div>
     <p><b>Academic Year </b><br> <span id="outputAcademicYear"></span></p>
     <p><b>Semester </b><br> <span id="outputSemester"></span></p>
     <p><b>Start Date/Time </b><br> <span id="outputStartDate"></span></p>
